# unovault

./: .gitignore  .tool-versions  CLAUDE.md  Cargo.toml  README.md  TESTING.md  TODOS.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml
app/: index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
app/src/: App.svelte  app.css  main.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: bridge.rs  commands.rs  error.rs  lib.rs  main.rs  state.rs
app/src/lib/: ipc.ts  keyboard.svelte.ts  store.svelte.ts
app/src/lib/components/: Button.svelte  Card.svelte  CommandBar.svelte  EmptyState.svelte  ErrorBanner.svelte  FieldLabel.svelte  Input.svelte  KindChip.svelte  ListRow.svelte  Sheet.svelte
app/src/lib/styles/: global.css  reset.css  tokens.css  typography.css
app/src/views/: AddItem.svelte  ImportWizard.svelte  ItemDetail.svelte  Locked.svelte  Settings.svelte  StatusBar.svelte  VaultList.svelte
crates/uniffi-bindgen/: Cargo.toml
crates/uniffi-bindgen/src/: main.rs
crates/unovault-cli/: Cargo.toml
crates/unovault-cli/src/: main.rs
crates/unovault-core/: Cargo.toml
crates/unovault-core/src/: crypto.rs  error.rs  event.rs  format.rs  install_id.rs  ipc.rs  lib.rs  recovery.rs  secret.rs  sync.rs  vault.rs
crates/unovault-ffi/: Cargo.toml
crates/unovault-ffi/src/: lib.rs
crates/unovault-import/: Cargo.toml
crates/unovault-import/src/: lib.rs
crates/unovault-import/src/parsers/: bitwarden.rs  keepass.rs  mod.rs  onepassword.rs
crates/unovault-macros/: Cargo.toml
crates/unovault-macros/src/: lib.rs
crates/unovault-macros/tests/: safe_command.rs
crates/unovault-native-host/: Cargo.toml
crates/unovault-native-host/src/: bridge_client.rs  lib.rs  main.rs  protocol.rs
crates/unovault-passkey/: Cargo.toml
crates/unovault-passkey/src/: lib.rs
design/spike/: item-detail.html  locked-home.html  vault-list.html
docs/: SPEC.md
extension/: README.md  manifest.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
extension/popup/: popup.css  popup.html  popup.ts
extension/src/: background.ts  content.ts  protocol.ts
swift/: README.md
swift/UnovaultFFI/: Package.swift
swift/UnovaultFFI/Sources/UnovaultFFI/: TouchIDSketch.swift  UnovaultFFI.swift
swift/UnovaultFFI/Sources/UnovaultFFIC/: module.modulemap  unovault_ffiFFI.h
swift/UnovaultFFI/Tests/UnovaultFFITests/: UnovaultFFITests.swift
