[package]
name = "unovault-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core vault engine for unovault — encryption, storage, and LWW merge"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
zeroize.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true

# Crypto primitives
argon2.workspace = true
chacha20poly1305.workspace = true
hmac.workspace = true
sha2.workspace = true
hkdf.workspace = true
subtle.workspace = true
base64.workspace = true

# OS randomness
rand.workspace = true

# BIP39 recovery phrase (24-word mnemonic)
bip39.workspace = true

# Home-directory resolution for the iCloud Drive discovery path.
dirs = "5"

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
