[package]
name = "unovault-import"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Importers for 1Password, Bitwarden, and KeePass exports — the adoption gate for users switching to unovault"

[lints]
workspace = true

[dependencies]
unovault-core = { path = "../unovault-core" }
thiserror.workspace = true
zeroize.workspace = true
serde.workspace = true
serde_json.workspace = true
zip.workspace = true
quick-xml.workspace = true

[dev-dependencies]
tempfile.workspace = true
