[package]
name = "unovault-native-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Chrome native messaging host that bridges the unovault browser extension to the desktop app over a local socket"

[lints]
workspace = true

[[bin]]
name = "unovault-native-host"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Platform-specific default path for the bridge socket
# (~/Library/Application Support/unovault/bridge.sock on macOS).
dirs = "5"

[dev-dependencies]
tempfile.workspace = true
