[package]
name = "unovault-passkey"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Software passkey authenticator for unovault — ECDSA P-256 credential storage, sign, and verify"

[lints]
workspace = true

[dependencies]
unovault-core = { path = "../unovault-core" }
thiserror.workspace = true
zeroize.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
sha2.workspace = true
base64.workspace = true
p256.workspace = true

[dev-dependencies]
tempfile.workspace = true
